--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-router": "^1.120.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "@tanstack/react-router": "^1.120.5",
     "dotenv": "^16.5.0",
     "electron": "^36.2.1",
     "lucide-react": "^0.511.0",
@@ -28,8 +29,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/node": "^22.15.18",
     "@tanstack/router-plugin": "^1.120.5",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
